# job-autopilot

./: .env.example  .gitignore  LICENSE  README.md  _pipeline.py  _test_resume.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: filters.example.json  rubric.example.json  sources.example.json  sources.json
frontend/: app.js  index.html  styles.css
src/job_autopilot/: __init__.py  __main__.py  api.py  cli.py  filters.py  html_utils.py  logging_config.py  settings.py
src/job_autopilot/discover/: __init__.py  base.py  workday.py
src/job_autopilot/models/: __init__.py  application.py  job.py  score.py  sources.py
src/job_autopilot/score/: __init__.py  llm.py  prompts.py  resume.py  scorer.py
src/job_autopilot/storage/: __init__.py  applications_store.py  json_store.py
tests/: __init__.py
