[project]
name = "job-autopilot"
version = "0.1.0"
description = "AI-powered job discovery, scoring, and application tracker."
authors = [{ name = "Aniruddhya Khatua" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]